# voice-unbound-editor

./: .gitattributes  .gitignore  CLAUDE.md  HOTKEYS.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/components/form/: AnchorNav.tsx  FilterRow.tsx  FormShell.tsx  HeroRow.tsx  SectionHeader.tsx
src/components/inspector/: InspectorSheet.tsx
src/components/layout/: BulkEditDrawer.tsx  CommandPalette.tsx  FileConflictDialog.tsx  FindReplaceDialog.tsx  MenuBar.tsx  ResizablePane.tsx  SchemaReferenceSheet.tsx  ShortcutsOverlay.tsx  StatusBar.tsx  WorkspaceUndoDrawer.tsx
src/components/tabs/: FileTabs.tsx
src/components/tree/: FileNode.tsx  FileTree.tsx  NewFileMenu.tsx  WorkspaceSearchPanel.tsx  tree-data.ts
src/components/ui/: DiffChunk.tsx  Input.tsx  Kbd.tsx  Label.tsx  Select.tsx  Sheet.tsx  Slider.tsx  Switch.tsx  Textarea.tsx
src/lib/: audio.ts  backup.ts  conditions-ops.ts  dom-accessors.ts  dot-path.ts  enums.ts  event-meta.ts  event-typos.ts  filename.ts  form-refs.ts  json-io.ts  keyboard.ts  paths.ts  schema.ts  synth-wav.ts  validator.ts  voice-subtypes.ts
src/lib/__tests__/: conditions-ops.test.ts  conditions-reorder.test.ts  (+7 more)
src/stores/: ui-store.ts  use-audio-shortcuts.ts  use-audio.ts  use-autosave.ts  use-document-field.ts  use-global-shortcuts.ts  use-workspace-watcher.ts  workspace-store.ts
(+39 files in other folders)
